--- a/iniadmatch/static/iniadmatch/css/common.css
+++ b/iniadmatch/static/iniadmatch/css/common.css
@@ -3,6 +3,7 @@ header {
     background-color: #ffffff;
     height: 50px;
     padding: 10px 20px;
+    margin-bottom: 20px;
     box-shadow: 0px 0px 10px #555;
     color: #21ade5;
 }
@@ -25,4 +26,28 @@ header a {
     float: right;
     font-size: 16px;
     margin-top: 7px;
+}
+
+/* コンポーネント */
+
+.title {
+    position: relative;
+    color: #21ade5;
+    font-size: 24px;
+    font-weight: bold;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.title::after {
+    display: inline-block;
+    position: absolute;
+    content: "";
+    bottom: -15px;
+    height: 7px;
+    width: 300px;
+    left: calc(50% - 150px);
+    background-color: #21ade555;
+    border-radius: 5px;
 }
