--- a/iniadmatch/static/iniadmatch/css/common.css
+++ b/iniadmatch/static/iniadmatch/css/common.css
@@ -1,3 +1,7 @@
+main {
+    margin: 0 20px;
+}
+
 /* header */
 header {
     background-color: #ffffff;
@@ -38,6 +42,7 @@ header a {
     justify-content: center;
     align-items: center;
     text-align: center;
+    margin-bottom: 40px;
 }
 
 .title::after {
@@ -50,4 +55,43 @@ header a {
     left: calc(50% - 150px);
     background-color: #21ade555;
     border-radius: 5px;
+}
+
+.card-group {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.card {
+    width: 200px;
+    height: 100px;
+    border: 4px solid #21ade5;
+    margin: 0 20px 20px 0;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.card:hover {
+    background-color: #21ade555;
+}
+
+.card-text {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+.card-title {
+    font-size: 0.6em;
+}
+
+.card-text p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    margin: 0;
 }
