--- a/iniadmatch/templates/iniadmatch/base/base.html
+++ b/iniadmatch/templates/iniadmatch/base/base.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css" />
         <link rel="stylesheet" type="text/css" href="{% static 'iniadmatch/css/common.css'%}">
         <link rel="stylesheet" type="text/css" href="{% block css %}{% endblock %}">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     </head>
     <body>
         {% include './header.html' %}
