--- a/iniadmatch/templates/iniadmatch/top.html
+++ b/iniadmatch/templates/iniadmatch/top.html
@@ -9,9 +9,9 @@
 <div class="card-group">
     <div class="card">
         <div class="card-text">
-            <p><i class=""></i>石川<span class="card-title">教授</span></p>
-            <p><i class=""></i>11/11 13:00~15:00</p>
-            <p><i class=""></i>CS,研究の相談,python,デザイン</p>
+            <p><i class="fas fa-user"></i>石川<span class="card-title">教授</span></p>
+            <p><i class="far fa-clock"></i>11/11 13:00~15:00</p>
+            <p><i class="fas fa-tags"></i>CS,研究の相談,python,デザイン</p>
         </div>
     </div>
 </div>
