--- a/iniadmatch/static/iniadmatch/css/common.css
+++ b/iniadmatch/static/iniadmatch/css/common.css
@@ -82,7 +82,7 @@ header a {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 15px;
+    margin-top: 3px;
 }
 
 .card-title {
@@ -93,5 +93,5 @@ header a {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    margin: 0;
+    line-height: 1.6em;
 }
