--- a/iniadmatch/templates/iniadmatch/top.html
+++ b/iniadmatch/templates/iniadmatch/top.html
@@ -5,17 +5,49 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-<p class="title">オフィスアワー一覧</p>
-<div class="card-group">
-    <div class="card">
-        <div class="card-text">
-            <p><i class="fas fa-user"></i>石川<span class="card-title">教授</span></p>
-            <p><i class="far fa-clock"></i>11/11 13:00~15:00</p>
-            <p><i class="fas fa-tags"></i>CS,研究の相談,python,デザイン</p>
+    {% if is_teacher %}
+        <p class="title">今後のオフィスアワーの予定</p>
+        <div class="card-group">
+            <div class="card">
+                <div class="card-text">
+                    <p><i class="fas fa-user"></i>泉川 叶多</p>
+                    <p><i class="far fa-clock"></i>11/11 13:00~15:00</p>
+                    <p><i class="fas fa-tags"></i>CS,研究の相談,python,デザイン</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-text">
+                    <p><i class="fas fa-user"></i>泉川 叶多</p>
+                    <p><i class="far fa-clock"></i>11/12 13:00~15:00</p>
+                    <p><i class="fas fa-tags"></i>CS</p>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
+    {% else %}
+        <p class="title">オフィスアワー一覧</p>
+        <div class="card-group">
+            <div class="card">
+                <div class="card-text">
+                    <p><i class="fas fa-user"></i>石川<span class="card-title">教授</span></p>
+                    <p><i class="far fa-clock"></i>11/11 13:00~15:00</p>
+                    <p><i class="fas fa-tags"></i>CS,研究の相談,python,デザイン</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-text">
+                    <p><i class="fas fa-user"></i>矢代<span class="card-title">教授</span></p>
+                    <p><i class="far fa-clock"></i>11/11 14:00~15:00</p>
+                    <p><i class="fas fa-tags"></i>IoT,研究の相談,python,OCamel</p>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+<a href="{% url 'logout' %}">Logout</a><br>
 {% else %}
-<a href="{% url 'social:begin' 'google-oauth2' %}">Login</a><br>
+    <div id="logout-view">
+        <h1>INIAD Match</h1>
+        <p>オフィスアワーを活用しよう！</p>
+        <a href="{% url 'social:begin' 'google-oauth2' %}"><button type="button" onclick="location.href='#'">Login</button></a>
+    </div>
 {% endif %}
 {% endblock %}
