--- a/iniadmatch/templates/iniadmatch/top.html
+++ b/iniadmatch/templates/iniadmatch/top.html
@@ -9,36 +9,44 @@
         <p class="title">今後のオフィスアワーの予定</p>
         <div class="card-group">
             <div class="card">
-                <div class="card-text">
-                    <p><i class="fas fa-user"></i>泉川 叶多</p>
-                    <p><i class="far fa-clock"></i>11/11 13:00~15:00</p>
-                    <p><i class="fas fa-tags"></i>CS,研究の相談,python,デザイン</p>
-                </div>
+                <a href="{% url 'schedule' 0 %}">
+                    <div class="card-text">
+                        <p><i class="fas fa-user"></i>泉川 叶多</p>
+                        <p><i class="far fa-clock"></i>11/11 13:00~15:00</p>
+                        <p><i class="fas fa-tags"></i>CS,研究の相談,python,デザイン</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <div class="card-text">
-                    <p><i class="fas fa-user"></i>泉川 叶多</p>
-                    <p><i class="far fa-clock"></i>11/12 13:00~15:00</p>
-                    <p><i class="fas fa-tags"></i>CS</p>
-                </div>
+                <a href="{% url 'schedule' 0 %}">
+                    <div class="card-text">
+                        <p><i class="fas fa-user"></i>泉川 叶多</p>
+                        <p><i class="far fa-clock"></i>11/12 13:00~15:00</p>
+                        <p><i class="fas fa-tags"></i>CS</p>
+                    </div>
+                </a>
             </div>
         </div>
     {% else %}
         <p class="title">オフィスアワー一覧</p>
         <div class="card-group">
             <div class="card">
-                <div class="card-text">
-                    <p><i class="fas fa-user"></i>石川<span class="card-title">教授</span></p>
-                    <p><i class="far fa-clock"></i>11/11 13:00~15:00</p>
-                    <p><i class="fas fa-tags"></i>CS,研究の相談,python,デザイン</p>
-                </div>
+                <a href="{% url 'schedule' 0 %}">
+                    <div class="card-text">
+                        <p><i class="fas fa-user"></i>石川<span class="card-title">教授</span></p>
+                        <p><i class="far fa-clock"></i>11/11 13:00~15:00</p>
+                        <p><i class="fas fa-tags"></i>CS,研究の相談,python,デザイン</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <div class="card-text">
-                    <p><i class="fas fa-user"></i>矢代<span class="card-title">教授</span></p>
-                    <p><i class="far fa-clock"></i>11/11 14:00~15:00</p>
-                    <p><i class="fas fa-tags"></i>IoT,研究の相談,python,OCamel</p>
-                </div>
+                <a href="{% url 'schedule' 0 %}">
+                    <div class="card-text">
+                        <p><i class="fas fa-user"></i>矢代<span class="card-title">教授</span></p>
+                        <p><i class="far fa-clock"></i>11/11 14:00~15:00</p>
+                        <p><i class="fas fa-tags"></i>IoT,研究の相談,python,OCamel</p>
+                    </div>
+                </a>
             </div>
         </div>
     {% endif %}
