[Add] routineの登録と削除の実装

--- a/iniadmatch/templates/iniadmatch/base/header.html
+++ b/iniadmatch/templates/iniadmatch/base/header.html
@@ -1,5 +1,5 @@
 <header>
-    <p class="app-name">INIAD match</p>
+    <a href="{% url 'top' %}" class="app-name">INIAD match</a>
     <input type="text" placeholder="タグを入力">
     <a href="{% url 'setting' %}">設定</a>
 </header>
