--- a/iniadmatch/static/iniadmatch/css/setting.css
+++ b/iniadmatch/static/iniadmatch/css/setting.css
@@ -2,11 +2,27 @@ label {
     display: inline-block;
 }
 
+.form-line {
+    display: block;
+    margin-bottom: 20px;
+}
+
 #viewname {
     display: inline-block;
     margin: 0 0 0 10px;
     width: 500px;
     border-bottom: 1px solid #21ade5;
+}
+
+.week {
+    display: inline-block;
+    margin: 0 0 0 10px;
+    width: 80px;
+    border-bottom: 1px solid #21ade5;
+}
+
+.form-split {
+    display: inline-block;
 }
 
 button {
