--- a/iniadmatch/templates/iniadmatch/setting.html
+++ b/iniadmatch/templates/iniadmatch/setting.html
@@ -41,7 +41,16 @@
         <p class="form-split">～</p>
         <input type="time" class="week" name="week4_end" value="{{ week4_end }}">
     </div>
+    <div class="form-line">
+        <label for="tags">タグ</label>
+        <input type="text" id="tags" name="tags" placeholder="タグを入力" value="{{ tags }}">
+    </div>
     <button type="submit">保存</button>
+    <p>
+        ※時刻設定は開始時と終了時の両方の入力が無いと登録できません。<br>
+        ※時刻設定は入力内容が削除することができます。<br>
+        ※タグは半角スペースで複数入力可能です。<br>
+    </p>
 </form>
 
 {% endblock %}
