--- a/iniadmatch/static/iniadmatch/css/setting.css
+++ b/iniadmatch/static/iniadmatch/css/setting.css
@@ -2,11 +2,31 @@ label {
     display: inline-block;
 }
 
-#viewname {
+input {
     display: inline-block;
     margin: 0 0 0 10px;
-    width: 500px;
     border-bottom: 1px solid #21ade5;
+}
+
+.form-line {
+    display: block;
+    margin-bottom: 20px;
+}
+
+#viewname {
+    width: 500px;
+}
+
+.week {
+    width: 80px;
+}
+
+.form-split {
+    display: inline-block;
+}
+
+#tags {
+    width: 750px;
 }
 
 button {
