--- a/iniadmatch/templates/iniadmatch/schedule.html
+++ b/iniadmatch/templates/iniadmatch/schedule.html
@@ -8,10 +8,10 @@
 <p class="title">オフィスアワーの詳細</p>
 
 <div id="schedule-info">
-    <p><i class="fas fa-user"></i>{{ schedule.teacher.account.name }}</p>
-    <p><i class="far fa-clock"></i>{% display_schedule_time schedule.start schedule.end %}</p>
+    <p><i class="fas fa-user"></i>{{ schedule.routine.teacher.account.name }}</p>
+    <p><i class="far fa-clock"></i>{% display_schedule_time schedule.date schedule.routine.start schedule.routine.end %}</p>
     <p><i class="fas fa-tags"></i>
-        {% with teacher_tags=schedule.teacher.tags.all %}
+        {% with teacher_tags=schedule.routine.teacher.tags.all %}
             {{ teacher_tags|tags_to_comma_separated_string }}
         {% endwith %}
     </p>
