--- a/iniadmatch/static/iniadmatch/css/setting.css
+++ b/iniadmatch/static/iniadmatch/css/setting.css
@@ -33,3 +33,9 @@ button {
     display: block;
     margin: 20px auto;
 }
+
+#logout {
+    display: block;
+    margin-top: 20px;
+    text-decoration: underline;
+}
