--- a/iniadmatch/templates/iniadmatch/base/header.html
+++ b/iniadmatch/templates/iniadmatch/base/header.html
@@ -1,5 +1,9 @@
 <header>
     <a href="{% url 'top' %}" class="app-name">INIAD match</a>
-    <input type="text" placeholder="タグを入力">
-    <a href="{% url 'setting' %}">設定</a>
+    <input type="text" placeholder="タグを検索">
+    {% if is_teacher %}
+        <a href="{% url 'setting' %}">設定</a>
+    {% else %}
+        <a href="{% url 'logout' %}" id="logout">ログアウト</a>
+    {% endif %}
 </header>
