[Fix] settingにてis_teacherがfalseになる不具合の修正

--- a/iniadmatch/templates/iniadmatch/base/header.html
+++ b/iniadmatch/templates/iniadmatch/base/header.html
@@ -1,9 +1,11 @@
 <header>
     <a href="{% url 'top' %}" class="app-name">INIAD match</a>
-    <input type="text" placeholder="タグを検索">
-    {% if is_teacher %}
-        <a href="{% url 'setting' %}">設定</a>
-    {% else %}
-        <a href="{% url 'logout' %}" id="logout">ログアウト</a>
+    {% if user.is_authenticated %}
+        <input type="text" placeholder="タグを検索">
+        {% if is_teacher %}
+            <a href="{% url 'setting' %}">設定</a>
+        {% else %}
+            <a href="{% url 'logout' %}">ログアウト</a>
+        {% endif %}
     {% endif %}
 </header>
